# timus_tasks

./: .clang-format  CMakeLists.txt  applyClang.bat  generate_vs2022_solution.bat  lib.cpp  lib.h  main.cpp  test_google.cpp  test_version.cpp  version.h.in
.github/workflows/: release.yml
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/my_allocator/: BlockAllocator.cpp  CMakeLists.txt  MyAllocator.hpp  main.cpp
src/task_1000/: CMakeLists.txt  main.cpp
src/task_1001/: CMakeLists.txt  main.cpp
src/task_1044/: CMakeLists.txt  main.cpp
src/task_1079/: CMakeLists.txt  main.cpp
src/task_1112/: CMakeLists.txt  main.cpp
src/task_1150/: CMakeLists.txt  main.cpp
src/task_1197/: CMakeLists.txt  main.cpp
src/task_1264/: CMakeLists.txt  main.cpp
src/task_1293/: CMakeLists.txt  main.cpp
src/task_1303/: CMakeLists.txt  main.cpp
src/task_1409/: main.cpp
src/task_1491/: CMakeLists.txt  main.cpp
src/task_1756/: CMakeLists.txt  main.cpp
src/task_1785/: CMakeLists.txt  main.cpp
src/task_1787/: main.cpp
src/task_1820/: CMakeLists.txt  main.cpp
src/task_1877/: main.cpp
src/task_1880/: CMakeLists.txt  main.cpp
src/task_1982/: CMakeLists.txt  main.cpp
src/task_2001/: main.cpp
src/task_2012/: CMakeLists.txt  main.cpp
src/task_2066/: CMakeLists.txt  main.cpp
src/task_2100/: CMakeLists.txt  main.cpp
src/task_2141/: CMakeLists.txt  main.cpp
src/test_boost/: CMakeLists.txt  test_version.cpp
src/test_google/: CMakeLists.txt  test.cpp  test_version.cpp
src/timus/task_1264/: main.cpp
src/timus/task_1409/: CMakeLists.txt  main.cpp
src/timus/task_1787/: CMakeLists.txt  main.cpp
src/timus/task_1877/: CMakeLists.txt  main.cpp
src/timus/task_2001/: CMakeLists.txt  main.cpp
