add_subdirectory(task_1000)
add_subdirectory(task_1001)
add_subdirectory(task_1044)
add_subdirectory(task_1079)
add_subdirectory(task_1112)
add_subdirectory(task_1150)
add_subdirectory(task_1197)
add_subdirectory(task_1264)
add_subdirectory(task_1293)
add_subdirectory(task_1303)
add_subdirectory(task_1409)
add_subdirectory(task_1491)
add_subdirectory(task_1756)
add_subdirectory(task_1785)
add_subdirectory(task_1787)
add_subdirectory(task_1820)
add_subdirectory(task_1877)
add_subdirectory(task_1880)
add_subdirectory(task_1982)
add_subdirectory(task_2001)
add_subdirectory(task_2012)
add_subdirectory(task_2066)
add_subdirectory(task_2100)
add_subdirectory(task_2141)

